fixed navigation z-index

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,4 +1,6 @@
 .nav-container {
+    z-index: 2;
+
     @media (min-width: 1024px) {
         padding-top: 20px;
         position: sticky;
